--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,11 @@
 @import "abstract/variables";
+@import "abstract/mixins";
+
 @import "base/typography";
+@import "base/resets";
+
+@import "layout/home";
+@import "layout/joinGame";
+
 @import "components/buttons";
+@import "components/forms";
