--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,27 +1,27 @@
 /* Heading */
 
-.ph-h-header {
+.ph-b-header {
   font-family: var(--font-header);
   color: var(--color-foreground-default);
 
   &--big {
     font-weight: bold;
     font-size: 36px;
-    line-height: 60px;
+    line-height: 40px;
     letter-spacing: -0.02em;
   }
 
   &--default {
     font-weight: 600;
     font-size: 26px;
-    line-height: 39px;
+    line-height: 30px;
     letter-spacing: -0.02em;
   }
 
   &--small {
     font-weight: 600;
     font-size: 20px;
-    line-height: 30px;
+    line-height: 24px;
     letter-spacing: -0.02em;
   }
 
