--- a/src/sass/pages/_joinGame.scss
+++ b/src/sass/pages/_joinGame.scss
@@ -1,10 +1,10 @@
-.ph-l-join-game {
+.ph-p-join-game {
   @include flex-center(column);
 
   width: 100%;
   height: 100%;
 
-  .ph-l-join-game__form {
+  .ph-p-join-game__form {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
