--- a/src/sass/layout/_grids.scss
+++ b/src/sass/layout/_grids.scss
@@ -1,4 +1,4 @@
-.ph-p-game {
+.ph-l-game {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -28,5 +28,35 @@
 
   &__console {
     grid-area: console;
+  }
+}
+
+.ph-l-lobby {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  grid-template-rows: 100%;
+  grid-template-areas: "main players";
+
+  height: 100%;
+  width: 100%;
+
+  grid-gap: 20px;
+  padding: 20px;
+
+  background: var(--color-background-root);
+
+  &--user {
+    display: flex;
+  }
+
+  &__players {
+    grid-area: players;
+  }
+
+  &__main {
+    display: flex;
+    flex-direction: column;
+
+    grid-area: main;
   }
 }
