partitoned game up

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import "components/inputs";
 @import "components/dividers";
 @import "components/editor";
+@import "components/testcases";
 
 @import "layout/panels";
 @import "layout/forms";
