--- a/src/sass/layout/_panels.scss
+++ b/src/sass/layout/_panels.scss
@@ -32,6 +32,7 @@
   }
 
   &__content {
+    overflow-y: auto;
     width: 100%;
     height: 100%;
 
@@ -41,6 +42,13 @@
     &--basic {
       display: flex;
       flex-direction: column;
+      gap: 20px;
+      padding: 32px;
+    }
+
+    &--basic-reverse {
+      display: flex;
+      flex-direction: column-reverse;
       gap: 20px;
       padding: 32px;
     }
