--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,8 @@
 @import "components/inputs";
 @import "components/dividers";
 @import "components/editor";
-@import "components/testcases";
+@import "components/testCases";
+@import "components/logMessage";
 
 @import "layout/panels";
 @import "layout/forms";
