--- a/src/sass/components/_logMessage.scss
+++ b/src/sass/components/_logMessage.scss
@@ -16,4 +16,11 @@
   &--error {
     background: var(--color-negative-strongest);
   }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    list-style: none;
+  }
 }
