--- a/src/sass/layout/_grids.scss
+++ b/src/sass/layout/_grids.scss
@@ -1,18 +1,33 @@
 .ph-l-game {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas:
-    "question editor"
-    "test-cases output";
-
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
 
-  grid-gap: 20px;
-  padding: 20px;
+  &__header {
+    background: var(--color-background-default);
+    border-bottom: 0.5px solid var(--color-outline-default);
+    height: 80px;
+    width: 100%;
+  }
 
-  background: var(--color-background-root);
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 30%;
+    grid-template-areas:
+      "question editor"
+      "test-cases output";
+
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+
+    grid-gap: 20px;
+    padding: 20px;
+
+    background: var(--color-background-root);
+  }
 
   &__question {
     grid-area: question;
