--- a/src/sass/components/_editor.scss
+++ b/src/sass/components/_editor.scss
@@ -2,16 +2,21 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-}
 
-.ph-c-editor__bar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  &__editing-area {
+    height: 100%;
+    overflow-y: auto;
+  }
 
-  padding-right: 26px;
-  height: 30px;
+  &__bar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 
-  background: var(--color-background-default);
-  border-radius: var(--border-radius);
+    padding-right: 26px;
+    height: 30px;
+
+    background: var(--color-background-default);
+    border-radius: var(--border-radius);
+  }
 }
