--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/editor";
 @import "components/testCases";
 @import "components/logMessage";
+@import "components/animatedIcons";
 
 @import "layout/panels";
 @import "layout/forms";
