--- a/src/sass/components/_testCases.scss
+++ b/src/sass/components/_testCases.scss
@@ -6,7 +6,8 @@
   border: 1px solid var(--color-outline-default);
   border-radius: var(--border-radius);
   width: 100%;
-  height: 65px;
+  height: 55px;
+  min-height: 55px;
 
   &--success {
     border: 1px solid var(--color-positive-default);
