--- a/src/sass/layout/_grids.scss
+++ b/src/sass/layout/_grids.scss
@@ -5,6 +5,13 @@
   width: 100%;
 
   &__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px 20px;
+    gap: 10px;
+
     background: var(--color-background-default);
     border-bottom: 0.5px solid var(--color-outline-default);
     height: 60px;
@@ -30,7 +37,6 @@
   }
 
   &__question {
-    resize: both;
     grid-area: question;
   }
 
