--- a/src/sass/components/_dividers.scss
+++ b/src/sass/components/_dividers.scss
@@ -1,19 +1,19 @@
 .ph-c-divider {
   &--vertical {
-    width: 1px;
+    border-left: 1px solid;
     height: 100%;
   }
 
   &--horizontal {
     width: 100%;
-    height: 1px;
+    border-top: 1px solid;
   }
 
   &--subtle {
-    background: var(--color-outline-dimmer);
+    border-color: var(--color-outline-dimmer);
   }
 
   &--default {
-    background: var(--color-outline-default);
+    border-color: var(--color-outline-default);
   }
 }
